2014-08-12  vaiorabbit  <https://twitter.com/vaiorabbit>

	* OpenGL 4.5

2014-07-28  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-07-24  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-07-16  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-06-18  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-06-14  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-05-18  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-05-15  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-04-04  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-03-21  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-03-18  vaiorabbit  <https://twitter.com/vaiorabbit>

	* OpenGL ES 3.1

2014-03-15  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-02-17  vaiorabbit  <https://twitter.com/vaiorabbit>

	* sample/GLUT/glut_gears.rb: Added.

2014-02-15  vaiorabbit  <https://twitter.com/vaiorabbit>

	* sample/DebugOutput: Added.

2014-02-14  vaiorabbit  <https://twitter.com/vaiorabbit>

	* samples: Fixed Array#pack abuse to improve performance.

2014-02-09  vaiorabbit  <https://twitter.com/vaiorabbit>

	* sample/GLExcess/glxs_glut.rb : Added.

2014-02-08  vaiorabbit  <https://twitter.com/vaiorabbit>

	* README.md: Added links to freeglut.
	* sample/README.md: Updated.

2014-02-02  vaiorabbit  <https://twitter.com/vaiorabbit>

	* sample/simple_glut.rb: Added.
	* glut.rb: Fixed wrong glutTimerFunc signature.

2014-01-31  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-01-01  vaiorabbit  <https://twitter.com/vaiorabbit>

	* glut.rb: Now supports API Level 4 (GLUT_API_VERSION = 4).